Checked with java 17, rewrote some functions, final ver